[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/menu_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/background2.png" type="Texture" id=3]
[ext_resource path="res://Textures/ButtonYellow.png" type="Texture" id=4]
[ext_resource path="res://Textures/title.png" type="Texture" id=5]
[ext_resource path="res://UiObjects/UiButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/ButtonPressedYellow.png" type="Texture" id=7]
[ext_resource path="res://Textures/ButtonGreen.png" type="Texture" id=8]
[ext_resource path="res://Textures/ButtonPressedBlue.png" type="Texture" id=9]
[ext_resource path="res://Textures/ButtonPressedGreen.png" type="Texture" id=10]
[ext_resource path="res://Textures/ButtonBlue.png" type="Texture" id=11]
[ext_resource path="res://Textures/ButtonGrey.png" type="Texture" id=12]
[ext_resource path="res://Textures/ButtonPressedGrey.png" type="Texture" id=13]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.15
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="CenterContainer2"]
margin_left = 140.0
margin_right = 940.0
margin_bottom = 300.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 290.0
margin_top = 636.0
margin_right = 790.0
margin_bottom = 996.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestGameButtonButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 100.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
_color = 4
_text = "Test Game"

[node name="QuickGameButtonButton2" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
_color = 1
_text = "Quick Game"

[node name="DailyGameButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 500.0
margin_bottom = 230.0
_text = "Daily Game"

[node name="StartGameButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 500.0
margin_bottom = 230.0
action_mode = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
_color = 2
_text = "Start Game"

[node name="HighscoreButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 500.0
margin_bottom = 230.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
_color = 3
_text = "Highscores"

[node name="SignOutButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 390.0
margin_right = 500.0
margin_bottom = 490.0
_text = "Sign out"

[node name="SignInButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 130.0
margin_right = 500.0
margin_bottom = 230.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
_color = 1
_text = "Sign In"

[node name="ExitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 260.0
margin_right = 500.0
margin_bottom = 360.0
_text = "Exit"

[node name="HelloLabel" type="Label" parent="."]
visible = false
anchor_left = 0.01
anchor_top = 0.7
anchor_right = 0.99
anchor_bottom = 0.7
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Hello guest"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/TestGameButtonButton" to="." method="_on_TestGameButtonButton_button_up_not_ouside"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/QuickGameButtonButton2" to="." method="_on_QuickGameButtonButton_button_up"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/DailyGameButton" to="." method="_on_DailyGameButton_button_up"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_button_up"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/HighscoreButton" to="." method="_on_HighscoreButton_button_up"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/SignOutButton" to="." method="_on_SignOutButton_button_up"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/SignInButton" to="." method="_on_SignInButton_button_up"]
[connection signal="button_up_not_ouside" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_button_up"]
